--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ test.dat
 your_sorter
 build/
 data/
+
+report/missfont.log
+report/report.aux
+report/report.log
+report/report.pdf
+report/report.synctex.gz
+report/report.toc
